[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-fast-treenode"
version = "2.1.0"
description = "Application for supporting tree (hierarchical) data structure in Django projects"
readme = "README.md"
authors = [{ name = "Timur Kady", email = "timurkady@yandex.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "Django >=4.0",
    "pympler >=1.0",
    "django-widget-tweaks >= 1.5"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
import_export = [
    "openpyxl",
    "pyyaml",
    "xlsxwriter"
]

[project.urls]
Homepage = "https://github.com/TimurKady/django-fast-treenode"
Documentation = "https://github.com/TimurKady/django-fast-treenode#readme"
Source = "https://github.com/TimurKady/django-fast-treenode"
Issues = "https://github.com/TimurKady/django-fast-treenode/issues"
