[egg_info]
tag_build = 
tag_date = 0

[metadata]
name = django-fast-treenode
version = 1.1.0
description = Application for supporting tree (hierarchical) data structure in Django projects
long_description_content_type = text/markdown
long_description = file: README.md
url = https://github.com/TimurKady/fast-treenode
author = Timur Kady
author_email = timurkady@yandex.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.0