[egg_info]
tag_build = 
tag_date = 0

[metadata]
name = django-fast-treenode
version = 2.0.0
description = Application for supporting tree (hierarchical) data structure in Django projects
long_description_content_type = text/markdown
long_description = file: README.md
url = https://github.com/TimurKady/fast-treenode
author = Timur Kady
author_email = timurkady@yandex.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
include_package_data = true
packages = find:
python_requires = >=3.9
install_requires =
    Django >= 3.2, <5.0
    pympler >= 1.0

[options.extras_require]
import_export =
    openpyxl
    pyyaml
    pandas
