[metadata]
name = django-fast-treenode
version = 2.1.0
description = Application for supporting tree (hierarchical) data structure in Django projects
long_description = file: README.md
long_description_content_type = text/markdown
author = Timur Kady
author_email = timurkady@yandex.com
license = MIT
license_files = LICENSE
url = https://github.com/TimurKady/django-fast-treenode
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Framework :: Django
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
    Framework :: Django :: 5.1
    Framework :: Django :: 5.2
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.9
install_requires =
    Django >=4.0
    pympler >=1.0
    django-widget-tweaks >= 1.5

[options.extras_require]
import_export =
    openpyxl
    pyyaml
    xlsxwriter
